Completed location code and reverse geocode

--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "assignment",
+    "name": "Project",
     "slug": "snack-4f62da3d-9144-4c31-9779-121c4b375028",
     "version": "1.0.0",
     "orientation": "portrait",
