final submission upload.

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "Project",
-    "slug": "snack-4f62da3d-9144-4c31-9779-121c4b375028",
+    "name": "infor",
+    "slug": "snack-b6b720fa-54b6-40fa-a77f-7b5d7a546f36",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
